<!--
  ~ Copyright 2014 Mario Guggenberger <mg@protyposis.net>
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >

    <item android:id="@+id/action_slowspeed"
        android:title="@string/action_slowspeed" />

    <item android:id="@+id/action_halfspeed"
        android:title="@string/action_halfspeed" />

    <item android:id="@+id/action_normalspeed"
        android:title="@string/action_normalspeed" />

    <item android:id="@+id/action_doublespeed"
        android:title="@string/action_doublespeed" />

    <item android:id="@+id/action_quadspeed"
        android:title="@string/action_quadspeed" />

    <item android:id="@+id/action_seekcurrentposition"
        android:title="@string/action_seekcurrentposition" />

    <item android:id="@+id/action_seekcurrentpositionplus1ms"
        android:title="@string/action_seekcurrentpositionplus1ms" />

    <item android:id="@+id/action_seektoend"
        android:title="@string/action_seektoend" />

    <item android:id="@+id/action_getcurrentposition"
        android:title="@string/action_getcurrentposition" />

    <item android:id="@+id/action_reload_source"
        android:title="@string/action_reload_source" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:visible="false"/>
</menu>
